<resources>
    <string name="opcion1">Actividad 2</string>
    <string name="opcion2">Manipulando elementos por codigo</string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Mi primera app</string>
    <string name="app_name">Mi app</string>
    <string name="action_settings">Configuración</string>
    <string name="opcion3">Mi Spinner</string>
    <string name="dialogo">Mi dialogo</string>
    <string name="Acercade">Acerca de </string>
    <string name="manipulacion">manipulacion entre actividades</string>
    <string name="comunicacion_entre_actividades">Comunicacion entre actividades</string>

</resources>
