<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android
    ="http://schemas.android.com/apk/res/android"
    xmlns:tools
        ="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloAplicacion"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"/>
    <Button android:id="@+id/button01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/opcion1"
        android:onClick="actividad2"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/opcion3"
        android:onClick="mispinner"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/manipulacion"
        android:onClick="manipulacion"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dialogo"
        android:onClick="dialogo"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Acercade"
        android:onClick="AcercaDe"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/comunicacion_entre_actividades"
        android:onClick="comunicacio"/>

    <Button android:id="@+id/button03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Salir"/>

</LinearLayout>
</ScrollView>